[Cronet] Retain block passed to setRequestFilterBlock on iOS.

BUG=665590

Review-Url: https://codereview.chromium.org/2510463002
Cr-Commit-Position: refs/heads/master@{#432571}

Former-commit-id: f62ae16d39451b1d505268d0bcf157a35b86fe84